  the shape is deleted by the shape canvas.
- Added shape style sfsSHOW_HANDLES. If used then the shape's handles are shown if the shape is 
  selected (even if the sfsSIZE_CHANGE style is not present).
- Fixed function wxSFShapeCanvas::GetShapeUnderCursor() (now it omits inactive or invisible shapes).

Changes in version 1.4.1 beta (2007-12-07):
--------------------------------------------
- Improved (accelerated) function wxSFShapeCanvas::GetTopmostHandleAtPosition().
- Improved wxXmlSerializer (XS_DECLARE_IO_HANDLER and XS_DEFINE_IO_HANDLER macros are
  now available for easy implementation of custom data types I/O handlers)
- Fixed wxShapeCanvas::Copy() and wxShapeCanvas::Cut() functions. Lines connected to 
  the copied shapes are copied as well.
- Fixed potential crash in wxDiagramManager::RemoveShapes() occured when double-linked shapes
  were removed.
- Improved canvas draving
- Removed accessor functions for partial canvas flags (UseGrid(), ShowGrid(), EnableMultiselection(), EnableMultiSizeChange()).
  These and some new canvas's flags can be now managed via universal canvas member functions SetStyle(), AddStyle(), RemoveStyle()
  and ContainsStyle(). See the canvas class's STYLE enumeration for all available flags.

Changes in version 1.4.0 beta (2007-11-22):
--------------------------------------------
- New (more flexible) version of wxXmlSerializer (saved files are compatible with the previous version).
- Project's directory structure fulfills requirements for integration into wxWidgets/wxAdditions
  distribution (all headers are now located in '../wx/wxsf' and 'wx/wxxmlserializer' subdirs).
- Line shapes connecting child shapes with their parents starts/end at the parent's border, not the center.
- Fixed crash occuring when a parent shape connected with his child shape is removed
- Added "premake" build system

Changes in version 1.3.2 beta (2007-10-26):
--------------------------------------------